Release 20256.1.1: release notes updates